kratos/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kratos-ingress
  namespace: kratos
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/configuration-snippet: |
      set $cors_origin '';
      if ($http_origin ~* "https://login.prayujt.com|http://localhost:5173") {
          set $cors_origin $http_origin;
      }
      more_set_headers 'Access-Control-Allow-Origin: $cors_origin';
      more_set_headers 'Access-Control-Allow-Methods: GET, POST, OPTIONS';
      more_set_headers 'Access-Control-Allow-Headers: Authorization, Cookie, Origin, Content-Type, Accept, X-Csrf-Token';
      more_set_headers 'Access-Control-Expose-Headers: Content-Type, Set-Cookie';
      more_set_headers 'Access-Control-Allow-Credentials: true';
spec:
  tls:
  - hosts:
    - idp.prayujt.com
    secretName: idp-prayujt-certs
  rules:
  - host: idp.prayujt.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kratos-public
            port:
              number: 80
